web-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
  labels:
    app.kubernetes.io/name: web-service
    app.kubernetes.io/component: web-service
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-service
        app.kubernetes.io/component: web-service
    spec:
      containers:
        - name: web-service
          image: nginx:alpine-stable
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: 
    web-service
  labels:
    app.kubernetes.io/name: web-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: web-service
  ports:
    - port: 80
      targetPort: http
