ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    cert-manager.io/cluster-issuer: "my-ca-issuer"
spec:
  tls:
    - hosts:
        - home-server
      secretName: web-server-tls
  rules:
  - host: home-server
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
